--- a/assurplus/views/conditions_parti_views.xml
+++ b/assurplus/views/conditions_parti_views.xml
@@ -59,6 +59,7 @@
         <field name="arch" type="xml">
             <tree>
                <field name="name"/>
+               <field name="etat"/>
                 
             </tree>
         </field>
