--- a/assurplus/views/conditions_parti_views.xml
+++ b/assurplus/views/conditions_parti_views.xml
@@ -7,6 +7,11 @@
         <field name="model">assurplus.conditions_parti</field>
         <field name="arch" type="xml">
             <form string="Conditions Particulieres">
+            <header>
+                <button name="action_close" etat="open" class="oe_highlight" 
+                    type="object" string="Valider"/>
+                <field name="etat" widget="statusbar" nolabel="1" statusbar_visible="open,closed"/>
+            </header>
                 <sheet>
                     <group>
                         <group>
