--- a/modules/assurplus/views/conditions_parti_views.xml
+++ b/modules/assurplus/views/conditions_parti_views.xml
@@ -24,7 +24,7 @@
                     <group>
                         <group>
                             <field name="avenant"/>
-                            <field name="assure_id"/>
+                            <field name="assure_id" options="{'no_create': True, 'no_create_edit': True}"/>
                             <field name="vehicule_id"/>
                         </group>
                         <group>
