[IMP] Améliore le smartbutton pour afficher le bon résultat

--- a/modules/assurplus/views/assure_views.xml
+++ b/modules/assurplus/views/assure_views.xml
@@ -11,7 +11,7 @@
                         <div class="oe_button_box" name="button_box">
                             <button name="open_conditions_parti" type="object"
                                 class="oe_stat_button" icon="fa-list">
-                                <field name="test_button" string="Contrats" widget="statinfo"></field>
+                                <field name="count_contrats" widget="statinfo"></field>
                             </button>
                         </div>
                         <group>
