--- a/modules/assurplus/views/assure_views.xml
+++ b/modules/assurplus/views/assure_views.xml
@@ -13,6 +13,10 @@
                                 class="oe_stat_button" icon="fa-list">
                                 <field name="count_contrats" widget="statinfo"></field>
                             </button>
+                            <button name="open_vehicules" type="object"
+                                class="oe_stat_button" icon="fa-car">
+                                <field name="count_cars" widget="statinfo"></field>
+                            </button>
                         </div>
                         <group>
                             <field name="name"/>
