--- a/modules/assurplus/views/contrat_views.xml
+++ b/modules/assurplus/views/contrat_views.xml
@@ -31,6 +31,7 @@
                     <group>
                         <group>
                             <field name="avenant"/>
+                            <field name="code_police"/>
                             <field name="assure_id" options="{'no_create': True, 'no_create_edit': True}"/>
                             <field name="vehicule_id"/>
                         </group>
