[ADD] Rajoute la gestion du conducteur habituel
- model
- view
- droits d'accès

--- a/modules/assurplus/views/contrat_views.xml
+++ b/modules/assurplus/views/contrat_views.xml
@@ -36,6 +36,7 @@
                                 <field name="vehicule_id"/>
                             </group>
                             <group>
+                                <field name="conducteur"/>
                                 <field name="date_effet"/>
                                 <field name="date_echeance"/>
                                 <field name="duree"/>
